--- a/Backend/rras/pom.xml
+++ b/Backend/rras/pom.xml
@@ -58,7 +58,7 @@
             <artifactId>lombok-mapstruct-binding</artifactId>
             <version>0.2.0</version>
             <scope>compile</scope>
-        </dependency>
+        </dependency
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-batch</artifactId>
