--- a/Backend/core_api/pom.xml
+++ b/Backend/core_api/pom.xml
@@ -116,6 +116,10 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
     </dependencies>
 
 	<build>
