Job parameter null pointer exception fix

--- a/Backend/calculation_engine/src/main/resources/application.yaml
+++ b/Backend/calculation_engine/src/main/resources/application.yaml
@@ -2,6 +2,9 @@ spring:
   application:
     name: calculation_engine
 
+  main:
+    web-application-type: none
+
   datasource:
     url: jdbc:postgresql://localhost:5432/BankingSystemDB
     username: lauren
